force-app/main/default/objects/Leave_Request__c/fields/Balance_After_Approval__c.field-meta.xml
<CustomField>
    <fullName>Balance_After_Approval__c</fullName>
    <formula>Current_Balance_Available__c - Days_to_Deduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance After Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>