force-app/main/default/objects/Leave_Request__c/fields/Current_Balance_Available__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance_Available__c</fullName>
    <formula>Leave_Balance__r.Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Balance Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>