force-app/main/default/objects/Leave_Request__c/fields/Days_Since_Submission__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Submission__c</fullName>
    <formula>TODAY() - DATEVALUE(Submitted_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Submission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>