force-app/main/default/objects/Leave_Request__c/fields/Days_to_Deduct__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Deduct__c</fullName>
    <formula>Number_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Deduct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>