force-app/main/default/objects/Leave_Request__c/fields/Email_Sent_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_to_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent to Employee</label>
    <type>Checkbox</type>
</CustomField>