force-app/main/default/objects/Leave_Request__c/fields/HR_Approver__c.field-meta.xml
<CustomField>
    <fullName>HR_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leave Requests (HR Approver)</relationshipLabel>
    <relationshipName>Leave_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>