force-app/main/default/objects/Leave_Request__c/fields/Is_Emergency_Leave__c.field-meta.xml
<CustomField>
    <fullName>Is_Emergency_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Emergency Leave</label>
    <type>Checkbox</type>
</CustomField>