force-app/main/default/objects/Leave_Request__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND( ISPICKVAL(Status__c,&quot;Submitted&quot;), Days_Since_Submission__c &gt; 7 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>