force-app/main/default/objects/Leave_Request__c/fields/Is_Retroactive__c.field-meta.xml
<CustomField>
    <fullName>Is_Retroactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retroactive</label>
    <type>Checkbox</type>
</CustomField>