force-app/main/default/objects/Leave_Request__c/fields/Last_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Date__c</fullName>
    <label>Last Email Date</label>
    <type>DateTime</type>
</CustomField>