force-app/main/default/objects/Leave_Request__c/fields/Manager_Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Comment__c</fullName>
    <label>Manager Approval Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>