force-app/main/default/objects/Leave_Request__c/fields/Manager_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Review_Date__c</fullName>
    <label>Manager Review Date</label>
    <type>DateTime</type>
</CustomField>