force-app/main/default/objects/Leave_Request__c/fields/Processed_in_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Processed_in_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed in Payroll</label>
    <type>Checkbox</type>
</CustomField>