force-app/main/default/objects/Leave_Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <displayFormat>LR-{YYYY}-{00000}</displayFormat>
    <label>Request Number</label>
    <type>AutoNumber</type>
</CustomField>