force-app/main/default/objects/Leave_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Manager_Review</fullName>
            </value>
            <value>
                <fullName>Manager_Approved</fullName>
            </value>
            <value>
                <fullName>Manager_Rejected</fullName>
            </value>
            <value>
                <fullName>HR_Review</fullName>
            </value>
            <value>
                <fullName>HR_Approved</fullName>
            </value>
            <value>
                <fullName>HR_Rejected</fullName>
            </value>
            <value>
                <fullName>On_Leave</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On_Hold</fullName>
            </value>
            <value>
                <fullName>Pending HR Approval</fullName>
            </value>
            <value>
                <fullName>Cancellation Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>