force-app/main/default/objects/Leave_Request__c/validationRules/Block_Over_Balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Over_Balance</fullName>
    <active>false</active>
    <description>Prevents requests exceeding available balance</description>
    <errorConditionFormula>Days_to_Deduct__c &gt; Current_Balance_Available__c</errorConditionFormula>
    <errorMessage>You cannot request more days than your available balance.</errorMessage>
</ValidationRule>