force-app/main/default/objects/Leave_Request__c/validationRules/Min_Notice_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Notice_Days</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Leave_Type__c)),
  NOT(ISBLANK(Leave_Type__r.Min_Notice_Days__c)),
  (From_Date__c - TODAY()) &lt; Leave_Type__r.Min_Notice_Days__c
)</errorConditionFormula>
    <errorMessage>This leave type requires more advance notice. Please check the policy.</errorMessage>
</ValidationRule>